minikubeHost/yamls/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeservice
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pyservice
spec:
  selector:
    app: py
  ports:
  - protocol: TCP
    port: 8080 
    targetPort: 5000
---
