minikubeHost/yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: node.devtools.digital
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodeservice
            port: 
              number: 8080
  - host: py.devtools.digital
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pyservice
            port: 
              number: 8080
  - host: paris.devtools.digital
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodeservice
            port: 
              number: 8080
